Downgrade source code to Java 11